[package]
name = "fastnd"
version = "0.0.1-beta"
edition = "2024"
authors = ["Umang Surana <teencoder@github.io"]

description = "A numpy alternative made in rust, for rust"
license = "MIT"
readme = "README.md"


[dependencies]
bon = "3.6.3"
rand = "0.9.1"
thiserror = "2.0.12"
tokio = "1.45.1"


# Cargo.toml
[lib]
name = "fastnd"
path = "src/lib.rs"

[[bin]]
name = "fastnd-bin"
path = "src/main.rs"
test = false
