[package]
name = "fastnd"
version = "0.0.1-beta"
edition = "2024"
authors = ["Umang Surana <teencoder@github.io"]

description = "A numpy alternative made in rust, for rust"
license = "MIT"
readme = "README.md"


# Cargo.toml
[lib]
name = "fastnd"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.25.0"
features = ["extension-module"]